@@ -1,3 +1,8 @@
+2015-10-13 Dominic Chen <d.c.ddcc@gmail.com>
+
+	* OpenSSL/crypto.py: Implement the ``dump_crl()`` function to dump a
+	  certificate revocation list out to a string buffer.
+
 2015-09-07 Sam Lee <sam.rr.lee@gmail.com>
 
 	* OpenSSL/SSL.py, OpenSSL/test/test_ssl.py: Implemented
